updated styles + remove "current"
changed the overall colour themes

removed the option to check current location

updated alignment of forecast

removed future days prediction

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: white;
+  background-color: #eefaf7fc;
 }
 
 ul {
@@ -13,8 +13,8 @@ ul {
   line-height: 19px;
   text-align: left;
   position: relative;
-  left: 85%;
-  top: -80px;
+  left: 50%;
+  bottom: 145px;
 }
 
 h1 {
@@ -23,7 +23,7 @@ h1 {
   font-family: arial, sans-serif;
   font-weight: 100;
   font-size: 24px;
-  height: 27.7778px;
+  height: 28px;
   line-height: 28.8px;
   text-align: left;
   margin-bottom: 0;
@@ -47,6 +47,11 @@ a:hover {
 a:active {
   text-decoration: underline;
 }
+img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
 
 .entirity {
   max-width: 650px;
@@ -54,23 +59,31 @@ a:active {
   border: 1px solid #dadde1;
   text-align: center;
   display: block;
-  padding: 20px 60px;
+  padding: 20px 50px;
   border-radius: 10px;
   margin-bottom: 0;
+  background-color: white;
 }
 
 .search-box {
-  width: 80%;
+  width: 81%;
   height: 38px;
   border-radius: 5px;
-  border: 1px solid #526072;
-  background-color: rgb(188, 188, 240);
+  border: 1px solid #d9eeeffc;
   position: relative;
   right: 13px;
+  margin-bottom: 20px;
+  color: black;
+  background-color: #d9eeeffc;
+}
+
+.button {
+  width: 80px;
+  background-color: #91b9bbfc;
 }
 
 .caption {
-  font-size: 30px;
+  font-size: 60px;
   text-align: left;
   position: relative;
   top: -20px;
@@ -86,6 +99,32 @@ a:active {
 .row {
   min-height: 40px;
 }
+.description {
+  font-size: 14px;
+  text-align: left;
+  font-weight: 100;
+  position: relative;
+  bottom: 32px;
+  color: rgb(135, 135, 135);
+  display: block;
+  font-family: arial, sans-serif;
+  margin-bottom: 0;
+  height: 28px;
+  line-height: 29px;
+  text-transform: capitalize;
+}
+
+.weather-list {
+  position: relative;
+  bottom: 120px;
+}
+
+.units {
+  position: relative;
+  top: -40px;
+  right: 5px;
+  font-size: 12px;
+}
 
 #current-date {
   color: rgb(135, 135, 135);
@@ -93,23 +132,9 @@ a:active {
   font-family: arial, sans-serif;
   font-weight: 100;
   font-size: 16px;
-  height: 27.7778px;
-  line-height: 28.8px;
+  height: 28px;
+  line-height: 29px;
   text-align: left;
   top: -25px;
   position: relative;
-}
-
-.day {
-  font-size: 15px;
-}
-
-.temp {
-  font-size: 12px;
-}
-
-.units {
-  position: relative;
-  font-size: 10px;
-  top: -15px;
 }
