--- a/src/styles.css
+++ b/src/styles.css
@@ -13,15 +13,15 @@ ul {
   line-height: 19px;
   text-align: left;
   position: relative;
-  left: 50%;
+  left: 75%;
   bottom: 145px;
 }
 
 h1 {
-  color: rgb(135, 135, 135);
+  color: rgb(60, 60, 60);
   display: block;
   font-family: arial, sans-serif;
-  font-weight: 100;
+  font-weight: bold;
   font-size: 24px;
   height: 28px;
   line-height: 28.8px;
@@ -51,8 +51,13 @@ img {
   margin-right: 5px;
   height: 64px;
   width: 64px;
+  position: relative;
+  left: 25px;
+  bottom: 7px;
 }
-
+hr {
+  background-color: #91b9bbfc;
+}
 .entirity {
   max-width: 650px;
   margin: 30px auto;
@@ -73,20 +78,29 @@ img {
   position: relative;
   right: 13px;
   margin-bottom: 20px;
-  color: black;
+  color: rgb(52, 52, 52);
   background-color: #d9eeeffc;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .button {
   width: 80px;
   background-color: #91b9bbfc;
+  border-color: #d9eeeffc;
+}
+
+.button:hover {
+  background-color: white;
+  color: #91b9bbfc;
+  border-color: #91b9bbfc;
 }
 
 .caption {
   font-size: 60px;
   text-align: left;
   position: relative;
-  top: -20px;
+  top: -110px;
+  left: 26%;
 }
 
 .content {
@@ -104,6 +118,7 @@ img {
   text-align: left;
   font-weight: 100;
   position: relative;
+  left: 1px;
   bottom: 32px;
   color: rgb(135, 135, 135);
   display: block;
@@ -116,7 +131,7 @@ img {
 
 .weather-list {
   position: relative;
-  bottom: 120px;
+  bottom: 185px;
 }
 
 .units {
@@ -124,6 +139,10 @@ img {
   top: -40px;
   right: 5px;
   font-size: 12px;
+}
+
+.search-box:focus {
+  outline: 1px solid #91b9bbfc;
 }
 
 #current-date {
