forecast is working
updated the forecast function so its integrated with the API.

It now shows the real forecast along with the max and min temps

added more styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -151,14 +151,16 @@ hr {
 }
 
 .weather-icon {
-  width: 24px;
-  height: 24px;
+  position: relative;
+  left: 0px;
 }
 
 .weather-forecast-day {
   position: relative;
-  bottom: 10px;
+  bottom: 100px;
   font-size: 16px;
+  margin-bottom: -110px;
+  margin-top: -30px;
 }
 
 .weather-forecast-temp {
